Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17833

lru_size is not maintained during umount and remount

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 3
    • 9223372036854775807

    Description

      It looks like lru_size is not maintained during umount & remount, even though the parameter has been added to the parameter llog by "lctl set_param -P"

      [testusr@testnode tests]$ sudo ../utils/lctl set_param -P ldlm.namespaces.*mdc*.lru_size=100
      [testusr@testnode tests]$ sudo ../utils/lctl get_param ldlm.namespaces.*mdc*.lru_size
      ldlm.namespaces.lustre-MDT0000-mdc-ffff9e53a93bc000.lru_size=100
      [testusr@testnode tests]$ sudo umount /mnt/lustre
      [testusr@testnode tests]$ sh llmountcleanup.sh ^C
      [testusr@testnode tests]$ sudo mount -t lustre 10.0.0.131@tcp:/lustre  /mnt/lustre
      [testusr@testnode tests]$ sudo ../utils/lctl get_param ldlm.namespaces.*mdc*.lru_size
      ldlm.namespaces.lustre-MDT0000-mdc-ffff9e597b29c800.lru_size=0
      

      After checking the code, it looks like parameter llog might be processed before the connection(client to MDS) is established, so even though the lru_resize is disabled by
      parameter config log processing (lru_size_store()), but later ptlrpc_connect_set_flags() will reset the flag, which will cause the issue.

      Attachments

        Activity

          People

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: